Fix missing margin from headings

--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -1,11 +1,11 @@
 h1, h2, h3, h4, h5, h6 {
-  * + & {
-    margin-top: 1.6em;
-  }
   main & {
     font-size: 1em;
     font-weight: 500;
     margin: 0;
+  }
+  main * + & {
+    margin-top: 1.6em;
   }
   main header & {
     font-size: 1.4em;
